# NER_Telugu

./: README.md  train_test_split.py
conll_evaluation/: make.deu  make.eng.2016  make.eng.org  make.eng.raw.2016
data/CRF++/: results0_IOB.data  results1_IOB.data  results2_IOB.data  results3_IOB.data  results4_IOB.data  results5_IOB.data  results6_IOB.data  results7_IOB.data  results8_IOB.data  results9_IOB.data
data/Gold_Data_Telugu/: NER_data.txt  test_sentences_0.txt  test_sentences_0_IOB.txt  test_sentences_1.txt  test_sentences_1_IOB.txt  test_sentences_2.txt  test_sentences_2_IOB.txt  test_sentences_3.txt  test_sentences_3_IOB.txt  test_sentences_4.txt  test_sentences_4_IOB.txt  test_sentences_5.txt  test_sentences_5_IOB.txt  test_sentences_6.txt  test_sentences_6_IOB.txt  test_sentences_7.txt  test_sentences_7_IOB.txt  test_sentences_8.txt  test_sentences_8_IOB.txt  test_sentences_9.txt  test_sentences_9_IOB.txt  test_words.txt  train_sentences_0.txt  train_sentences_0_IOB.txt  train_sentences_1.txt  train_sentences_1_IOB.txt  train_sentences_2.txt  train_sentences_2_IOB.txt  train_sentences_3.txt  train_sentences_3_IOB.txt  train_sentences_4.txt  train_sentences_4_IOB.txt  train_sentences_5.txt  train_sentences_5_IOB.txt  train_sentences_6.txt  train_sentences_6_IOB.txt  train_sentences_7.txt  train_sentences_7_IOB.txt  train_sentences_8.txt  train_sentences_8_IOB.txt  (+3 more)
data/LSTM-CRF/predictions/: predictions_0-no-dev.txt  predictions_0.txt  predictions_0_k.txt  predictions_0_z.txt  predictions_1-no-dev.txt  predictions_1.txt  predictions_2-no-dev.txt  predictions_2.txt  predictions_3-no-dev.txt  (+13 more)
data/YamCha/: results0_IOB.txt  results1_IOB.txt  results2_IOB.txt  results3_IOB.txt  results4_IOB.txt  results5_IOB.txt  results6_IOB.txt  results7_IOB.txt  results8_IOB.txt  results9_IOB.txt
lstmcrf/: predict_test.py
lstmcrf/model/: config.py  data_utils.py
yamcha/: AUTHORS  Makefile  Makefile.am  Makefile.in  case_study.model  case_study.se  case_study.svmdata  config.h  config.h.in  config.status  configure  configure.in  libtool  yamcha-config  yamcha.spec  yamcha.spec.in
yamcha/doc/: Makefile  Makefile.in  index.html  yamcha.css  yamcha.html
yamcha/example/: bag-of-words  bag-of-words.cpp
yamcha/libexec/: Makefile  Makefile.am  Makefile.in  PKE.pm  PKI.pm  changeRepr.pl  changeRepr.pl.in  conlleval.pl  conlleval.pl.in  mkdarts  mkdarts.cpp  mkmodel  mkmodel.in  mkparam  mkparam.in  mksvmdata  mksvmdata.in  mktrie  mktrie.cpp  pkemine  pkemine.cpp  selecttag  selecttag.in  showse  showse.in  svm_learn_wrapper  svm_learn_wrapper.in  zipmodel  zipmodel.in
yamcha/libexec/.deps/: mkdarts.Po  mktrie.Po  pkemine.Po
yamcha/man/: Makefile  Makefile.in  yamcha.1
yamcha/perl/: Makefile.PL  Makefile.PL.in  README  YamCha.pm  YamCha_wrap.cxx  test.pl
yamcha/python/: MANIFEST  README  YamCha.py  YamCha_wrap.cxx  setup.py  setup.py.in  test.py
yamcha/ruby/: README  YamCha_wrap.cpp  extconf.rb  extconf.rb.in  test.rb
yamcha/src/: Makefile  Makefile.am  Makefile.bcc32  Makefile.bcc32.in  Makefile.in  Makefile.msvc  Makefile.msvc.in  chunker.cpp  chunker.lo  chunkersub.h  common.h  darts.h  feature_index.cpp  feature_index.h  libyamcha.cpp  libyamcha.la  libyamcha.lo  mmap.h  param.cpp  param.h  svm.cpp  svm.lo  yamcha  yamcha.cpp  yamcha.h
yamcha/src/.libs/: libyamcha.la  libyamcha.lai  libyamcha.so.1  libyamcha.so.1.2.0  lt-yamcha  yamcha
yamcha/swig/: Makefile  YamCha.i  arg.i
yamcha/tests/: Makefile  Makefile.in  test1.sh  test2.sh  test3.sh  test4.sh  tmp.model  tmp.result  tmp.se  tmp.svmdata
yamcha/training/: Makefile.in
(+63 files in other folders)
