pkglibexecdir = ${libexecdir}/yamcha
pkglibexec_SCRIPTS = mkmodel mksvmdata svm_learn_wrapper mkparam showse zipmodel selecttag PKI.pm PKE.pm
EXTRA_DIST = PKE.pm PKI.pm
mkdarts_SOURCES = mkdarts.cpp
mktrie_SOURCES  = mktrie.cpp
pkemine_SOURCES = pkemine.cpp
INCLUDES=-I../src
pkglibexec_PROGRAMS = mkdarts mktrie pkemine


